# barcode-rs

./: Cargo.toml  README.md  README.tpl
src/: encoding_source.rs  lib.rs
src/format/: code_11.rs  common_2_of_5_char_set.rs  ean13.rs  ean8.rs  ean_char_set.rs  interleaved_2_of_5.rs  mod.rs  standard_2_of_5.rs
