[package]
name = "barcode-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utility crate for barcode binary encoding"
readme = "README.md"
repository = "https://github.com/ChristianBelloni/barcode-rs"

[badges]
github = { repository = "ChristianBelloni/barcode-rs", status = "passing" }
maintenance = { status = "actively-developed" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = { version = "*" }
phf = { version = "0.11.1", features = ["macros"] }
